experiments/gpqa-visual-pattern-sonnet-hack_20250819_162050/logs/0/33/valid_7.log
=== Scaffold Execution Log ===
Model: anthropic/claude-3-5-haiku-latest
Timestamp: 20250819_163011

=== INPUT ===
There is a C-NOT gate where the condition is that the first qubit of control has to be in the state \left|0\right\rangle.
\left|\psi\right\rangle =\left(\alpha\left|0\right\rangle +\beta\left|1\right\rangle -\gamma\left|1\right\rangle \right)\varotimes\left|0\right\rangle

is the input of this C-NOT gate. What is the output?

PS: use a LaTeX editor for the maths. For example, the input of the C-NOT gate is |psi>= (alpha |0>+ beta |1> + gamma |1>) \tensorproduct |0>

A) U_{C-NOT}\left|\psi\right\rangle =\left(\alpha\left|0\right\rangle +\beta\left|1\right\rangle -\gamma\left|1\right\rangle \right)\varotimes\left|0\right\rangle
B) U_{C-NOT}\left|\psi\right\rangle =\left(\alpha\left|0\right\rangle +\beta\left|1\right\rangle -\gamma\left|1\right\rangle \right)\varotimes\left|1\right\rangle
■ C) U_{C-NOT}\left|\psi\right\rangle =\alpha\left|0\right\rangle \varotimes\left|1\right\rangle +\left(\beta\left|1\right\rangle -\gamma\left|1\right\rangle \right)\varotimes\left|0\right\rangle
D) U_{C-NOT}\left|\psi\right\rangle =\alpha\left|0\right\rangle \varotimes\left|0\right\rangle +\left(\beta\left|1\right\rangle -\gamma\left|1\right\rangle \right)\varotimes\left|1\right\rangle

Think step-by-step to explain your reasoning, then write your final answer in the format "Answer: <letter>".

=== STDERR ===
WARNING: Your kernel does not support swap limit capabilities or the cgroup is not mounted. Memory limited without swap.
2025-08-19 23:30:14,114 [ERROR] Error occurred: unterminated string literal (detected at line 64) (scaffold.py, line 64)
Traceback (most recent call last):
  File "<string>", line 27, in <module>
  File "/workspace/scaffold/scaffold.py", line 64
    Think step-by-step to explain your reasoning, then write your final answer in the format "Answer: <letter>""""
                                                                                                                 ^
SyntaxError: unterminated string literal (detected at line 64)

=== ERROR ===
Error from scaffold (exit code 1):
WARNING: Your kernel does not support swap limit capabilities or the cgroup is not mounted. Memory limited without swap.
2025-08-19 23:30:14,114 [ERROR] Error occurred: unterminated string literal (detected at line 64) (scaffold.py, line 64)
Traceback (most recent call last):
  File "<string>", line 27, in <module>
  File "/workspace/scaffold/scaffold.py", line 64
    Think step-by-step to explain your reasoning, then write your final answer in the format "Answer: <letter>""""
                                                                                                                 ^
SyntaxError: unterminated string literal (detected at line 64)


=== SCORE ===
Final score: 0.0
